--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
 @import 'form.css';
+@import 'buttons.css';
 
 @tailwind base;
 @tailwind components;
